--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "link-react": "^3.0.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-slideshow": "^0.0.1",
     "react-slideshow-image": "^4.3.1",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
